--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,7 @@ services:
     env_file: .env-mysql
     environment:
       - MEDIAWIKI_DB_HOST=mysql
+      - MEDIAWIKI_DB_NAME=cgalwikidb
       - VIRTUAL_HOST=wiki.cgal.org
       - LETSENCRYPT_HOST=wiki.cgal.org
       - LETSENCRYPT_EMAIL=laurent.rineau@gmail.com
