Add a volume for /var/www/html/images

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,3 +53,5 @@ services:
       - VIRTUAL_HOST=wiki.cgal.org
       - LETSENCRYPT_HOST=wiki.cgal.org
       - LETSENCRYPT_EMAIL=laurent.rineau@gmail.com
+    volumes:
+      - ${CGAL_WIKI_IMAGES}:/var/www/html/images:Z
