Remove the password check: it is set by the nginx-proxy

--- a/apache/mediawiki.conf
+++ b/apache/mediawiki.conf
@@ -6,10 +6,10 @@
   RewriteCond %{REQUEST_FILENAME} !-d
   RewriteRule . /index.php [L]
 
-  AuthType Basic
-  AuthName "CGAL Members"
-  AuthUserFile /var/www/.htpasswd
-  Require valid-user
+#  AuthType Basic
+#  AuthName "CGAL Members"
+#  AuthUserFile /var/www/.htpasswd
+#  Require valid-user
 </Directory>
 
 <Directory /var/www/html/images>
